--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,14 +10,16 @@ add_subdirectory(third_party/qpoases-mirror)
 SET(DLONG OFF CACHE BOOL "")
 add_subdirectory(third_party/osqp)
 
+find_package(CGAL REQUIRED QUIET OPTIONAL_COMPONENTS Core)
 
 add_library(qp_wrappers INTERFACE)
 target_include_directories(
     qp_wrappers INTERFACE 
     include 
     third_party/qpoases-mirror/include
-    third_party/osqp/include)
-target_link_libraries(qp_wrappers INTERFACE eigen qpOASES osqp)
+    third_party/osqp/include
+    ${CGAL_INCLUDE_DIRECTORIES})
+target_link_libraries(qp_wrappers INTERFACE eigen qpOASES osqp CGAL::CGAL)
 
 add_executable(linear_regression example/linear_regression.cpp)
 target_link_libraries(linear_regression qp_wrappers)
