--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,18 +14,51 @@ add_subdirectory(third_party/osqp)
 # SET(CGAL_QP_NO_ASSERTIONS ON CACHE BOOL "cgal qp solver perf on")
 find_package(CGAL REQUIRED OPTIONAL_COMPONENTS Core PATHS third_party/cgal)
 
+include(cmake/FindCPLEX.cmake)
+
 add_library(qp_wrappers INTERFACE)
 target_include_directories(
-    qp_wrappers INTERFACE 
-    include 
-    third_party/qpoases-mirror/include
-    third_party/osqp/include
-    ${CGAL_INCLUDE_DIRECTORIES})
-target_link_libraries(qp_wrappers INTERFACE eigen qpOASES osqp CGAL::CGAL)
-target_compile_definitions(qp_wrappers INTERFACE CGAL_QP_NO_ASSERTIONS)
+  qp_wrappers
+  INTERFACE 
+  include 
+  third_party/qpoases-mirror/include
+  third_party/osqp/include
+  ${CGAL_INCLUDE_DIRECTORIES}
+)
+target_link_libraries(
+  qp_wrappers 
+  INTERFACE 
+  eigen 
+  qpOASES 
+  osqp 
+  CGAL::CGAL
+  # cplex-library
+  # cplex-concert
+  ilocplex
+  # cplex-cp
+  ${CMAKE_DL_LIBS}
+)
+target_compile_definitions(
+  qp_wrappers 
+  INTERFACE 
+  CGAL_QP_NO_ASSERTIONS
+)
 
-add_executable(linear_regression example/linear_regression/linear_regression.cpp)
-target_link_libraries(linear_regression qp_wrappers)
 
-add_executable(general_solver example/general_qp_solver/solver.cpp)
-target_link_libraries(general_solver qp_wrappers)
+add_executable(
+  linear_regression 
+  example/linear_regression/linear_regression.cpp
+)
+target_link_libraries(
+  linear_regression 
+  qp_wrappers
+)
+
+add_executable(
+  general_solver 
+  example/general_qp_solver/solver.cpp
+)
+target_link_libraries(
+  general_solver
+  qp_wrappers
+)
