--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,11 +38,63 @@ target_compile_definitions(
   CGAL_QP_NO_ASSERTIONS
 )
 
-include_directories( ${GUROBI_INCLUDE_DIRS} )
-target_link_libraries( qp_wrappers ${GUROBI_LIBRARIES} )
+if (GUROBI_INCLUDE_DIR)
+  # in cache already
+  set(GUROBI_FOUND TRUE)
+  set(GUROBI_INCLUDE_DIRS "${GUROBI_INCLUDE_DIR}" )
+  set(GUROBI_LIBRARIES "${GUROBI_LIBRARY};${GUROBI_CXX_LIBRARY}" )
+else (GUROBI_INCLUDE_DIR)
 
-set (CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11")
-target_link_libraries(qp_wrappers INTERFACE "-I /Library/gurobi901/mac64/include/ -L /Library/gurobi901/mac64/lib -lgurobi_c++ -lgurobi90 -lm")
+find_path(GUROBI_INCLUDE_DIR 
+          NAMES gurobi_c++.h
+          PATHS "$ENV{GUROBI_HOME}/include"
+                  "/Library/gurobi901/mac64/include"
+                 "C:\\libs\\gurobi502\\include"
+          )
+
+find_library( GUROBI_LIBRARY 
+              NAMES gurobi
+        gurobi45
+        gurobi46
+        gurobi50 
+        gurobi51
+        gurobi52
+        gurobi55
+        gurobi56
+        gurobi60
+        gurobi65
+        gurobi90
+              PATHS "$ENV{GUROBI_HOME}/lib" 
+                    "/Library/gurobi901/mac64/lib"
+                    "C:\\libs\\gurobi502\\lib"
+              )
+
+find_library( GUROBI_CXX_LIBRARY 
+              NAMES gurobi_c++
+              PATHS "$ENV{GUROBI_HOME}/lib" 
+                    "/Library/gurobi901/mac64/lib"
+                    "C:\\libs\\gurobi502\\lib"
+              )
+
+set(GUROBI_INCLUDE_DIRS "${GUROBI_INCLUDE_DIR}" )
+set(GUROBI_LIBRARIES "${GUROBI_LIBRARY};${GUROBI_CXX_LIBRARY}" )
+
+# use c++ headers as default
+# set(GUROBI_COMPILER_FLAGS "-DIL_STD" CACHE STRING "Gurobi Compiler Flags")
+
+include(FindPackageHandleStandardArgs)
+# handle the QUIETLY and REQUIRED arguments and set LIBCPLEX_FOUND to TRUE
+# if all listed variables are TRUE
+find_package_handle_standard_args(GUROBI  DEFAULT_MSG
+                                  GUROBI_LIBRARY GUROBI_CXX_LIBRARY GUROBI_INCLUDE_DIR)
+
+mark_as_advanced(GUROBI_INCLUDE_DIR GUROBI_LIBRARY GUROBI_CXX_LIBRARY)
+
+endif(GUROBI_INCLUDE_DIR)
+
+include_directories( ${GUROBI_INCLUDE_DIRS} ) 
+target_link_libraries(qp_wrappers INTERFACE "-I /Library/gurobi901/mac64/include -L /Library/gurobi901/mac64/lib -lgurobi_c++ -lgurobi90 -lm") 
+
 
 add_executable(
   linear_regression 
