--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,60 +3,6 @@ cmake_minimum_required(VERSION 3.10)
 project(qp_wrappers)
 set (CMAKE_CXX_STANDARD 14)
 
-if (GUROBI_INCLUDE_DIR)
-  # in cache already
-  set(GUROBI_FOUND TRUE)
-  set(GUROBI_INCLUDE_DIRS "${GUROBI_INCLUDE_DIR}" )
-  set(GUROBI_LIBRARIES "${GUROBI_LIBRARY};${GUROBI_CXX_LIBRARY}" )
-else (GUROBI_INCLUDE_DIR)
-
-find_path(GUROBI_INCLUDE_DIR 
-          NAMES gurobi_c++.h
-          PATHS "$ENV{GUROBI_HOME}/include"
-                  "/Library/gurobi901/mac64/include"
-                 "C:\\libs\\gurobi502\\include"
-          )
-
-find_library( GUROBI_LIBRARY 
-              NAMES gurobi
-        gurobi45
-        gurobi46
-        gurobi50 
-        gurobi51
-        gurobi52
-        gurobi55
-        gurobi56
-        gurobi60
-        gurobi65
-        gurobi90
-              PATHS "$ENV{GUROBI_HOME}/lib" 
-                    "/Library/gurobi901/mac64/lib"
-                    "C:\\libs\\gurobi502\\lib"
-              )
-
-find_library( GUROBI_CXX_LIBRARY 
-              NAMES gurobi_c++
-              PATHS "$ENV{GUROBI_HOME}/lib" 
-                    "/Library/gurobi901/mac64/lib"
-                    "C:\\libs\\gurobi502\\lib"
-              )
-
-set(GUROBI_INCLUDE_DIRS "${GUROBI_INCLUDE_DIR}" )
-set(GUROBI_LIBRARIES "${GUROBI_LIBRARY};${GUROBI_CXX_LIBRARY}" )
-
-# use c++ headers as default
-# set(GUROBI_COMPILER_FLAGS "-DIL_STD" CACHE STRING "Gurobi Compiler Flags")
-
-include(FindPackageHandleStandardArgs)
-# handle the QUIETLY and REQUIRED arguments and set LIBCPLEX_FOUND to TRUE
-# if all listed variables are TRUE
-find_package_handle_standard_args(GUROBI  DEFAULT_MSG
-                                  GUROBI_LIBRARY GUROBI_CXX_LIBRARY GUROBI_INCLUDE_DIR)
-
-mark_as_advanced(GUROBI_INCLUDE_DIR GUROBI_LIBRARY GUROBI_CXX_LIBRARY)
-
-endif(GUROBI_INCLUDE_DIR)
-
 add_subdirectory(third_party/eigen)
 add_subdirectory(third_party/qpoases-mirror)
 
@@ -67,6 +13,9 @@ add_subdirectory(third_party/osqp)
 # SET(NDEBUG ON CACHE BOOL "cgal qp solver perf on")
 # SET(CGAL_QP_NO_ASSERTIONS ON CACHE BOOL "cgal qp solver perf on")
 find_package(CGAL REQUIRED OPTIONAL_COMPONENTS Core PATHS third_party/cgal)
+
+include(cmake/FindCPLEX.cmake)
+include(cmake/FindGUROBI.cmake)
 
 add_library(qp_wrappers INTERFACE)
 target_include_directories(
@@ -85,14 +34,20 @@ target_link_libraries(
   qpOASES 
   osqp 
   CGAL::CGAL
+  # cplex-library
+  # cplex-concert
+  ilocplex
+  # cplex-cp
   ${CMAKE_DL_LIBS}
-  "-I /Library/gurobi901/mac64/include -L /Library/gurobi901/mac64/lib -lgurobi_c++ -lgurobi90 -lm"
+  ${GUROBI_CXX_LIBRARY}
+  ${GUROBI_LIBRARY}
 )
 target_compile_definitions(
   qp_wrappers 
   INTERFACE 
   CGAL_QP_NO_ASSERTIONS
 )
+
 
 add_executable(
   linear_regression 
